# weather-mcp-server

./: .cache.sqlite  .gitignore  CONTRIBUTING.md  README.md  agents.md  main.py  pyproject.toml  simple_openmeteo.py  weather.py
.github/workflows/: ci.yml
tests/: __init__.py  test_integration_http.py  test_weather.py
weather/: __init__.py
weather_mcp_server/: client.py  fetcher.py  formatter.py  retrieve_weather.py  weather.py
