[project]
name = "weather-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.25.0",
    "openmeteo-requests>=1.7.4",
    "openmeteo-sdk",
    "pytest>=7.0",
    "pytest-asyncio>=0.22",
]

[project.scripts]
weather = "weather_mcp_server:main"

[tool.setuptools.packages.find]
include = ["weather*"]
exclude = ["data", "tests", "mcp-client"]
